--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -36,7 +36,7 @@
 
 
 \begin{document}
-\SweaveOpts{concordance=TRUE}
+%\SweaveOpts{concordance=TRUE}
 
 \def\spacingset#1{\renewcommand{\baselinestretch}%
 {#1}\small\normalsize} \spacingset{1}
@@ -594,7 +594,11 @@ Figures~\ref{anom1} and \ref{anom2} show lineups where a null plot with a strong
 
 A mixed effects logit model is used separately for scatter plot and overlaid line evaluations. The tested model is:
 
-$$Power_{ijklt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \beta_{6} x_{5,l}(\beta_{7} + \beta_{8} x_{1,i}  + \beta_{9} x_{2,j}  + \beta_{10} x_{3,k} + \beta_{11} x_{4,t} + \beta_{12} x_{1,i} \* x_{2,j}) \gamma z_{s} + \epsilon_{ijkt} \right\}$$
+\begin{eqnarray*} 
+Power_{ijklt} &=& \psi \{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \\
+ & & \beta_{5} x_{1,i} \* x_{2,j} + \beta_{6} x_{5,l}(\beta_{7} + \beta_{8} x_{1,i}  + \beta_{9} x_{2,j}  + \beta_{10} x_{3,k} + \\
+ & & \beta_{11} x_{4,t} + \beta_{12} x_{1,i} \* x_{2,j}) \gamma z_{s} + \epsilon_{ijkt} \}
+\end{eqnarray*}
 
 Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, $\rho$, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $x_{5,l}$ denotes the plot design, with $l =0$ for the overlaid lines type. Finally, $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$. It is assumed that $\epsilon_{ijkt} \sim \mathcal{N} (0, \Sigma_{ijkt})$ and $\gamma \sim \mathcal{N} (0, \delta)$
 
@@ -638,7 +642,7 @@ kable(powercoef, format="latex", digits=2)
 @
 \end{table}
 
-Table \ref{tab1} summarises the model estimates. It can be confusing the interpret the model estimates, and at first glance it appears the negative plot coefficient implies that overliad lines are substantially more powerful than the scatter plot, but this is misleading and interpreting the full model involves combining the estimates for the different interactions with abs($\rho$) and sign($\rho$). abs($\rho$) models the power difference between low and high correlations, and abs($\rho)*sign($\rho$) models an increase in power appearing in positive but not negative correlation. 
+Table \ref{tab1} summarises the model estimates. It can be confusing the interpret the model estimates, and at first glance it appears the negative plot coefficient implies that overliad lines are substantially more powerful than the scatter plot, but this is misleading and interpreting the full model involves combining the estimates for the different interactions with abs($\rho$) and sign($\rho$). abs($\rho$) models the power difference between low and high correlations, and $\mbox{abs}(\rho)*\mbox{sign}(\rho$) models an increase in power appearing in positive but not negative correlation. 
 Taking these into account, the scatter plot shows superior performance and higher values of abs($\rho$), It needs to be restated that we only tested correlations at  0.3, 0.5, 0.7 and 0.9, so the results below an absolute value of 0.3 are unreliable and may be artifacts of regression smoothing methods.
 
 %The correlation:sign interaction shows that the scatter plot has close to symmetric performance for positive (correlation:sign + correlation) and negative (-correlation) correlation while the overlaid line graph is substantially weaker for negative values of correlation.
@@ -706,7 +710,7 @@ ability <- merge(full.sub[,c("subj_id", "pic_id", "correct")], turk.correct[c("p
 ability <- summarise(group_by(ability, subj_id), actual=sum(correct), estimated=sum(percent))
 ability$diff <- ability$actual - ability$estimated
 ability.re <- merge(ability, randomeffects, by="subj_id")
-ggplot(data=ability.re, aes(x=diff, y=re)) + geom_point() + labs{x="Visual Ability", y="Random Effects"}
+ggplot(data=ability.re, aes(x=diff, y=re)) + geom_point() + labs(x="Visual Ability", y="Random Effects")
 @
 \caption{Visual ability plotted against random effects. The diagonal pattern suggests a strong positive relationship, indicating that the random effects in the model are a suitable measure of visual ability.}
 \end{figure}
@@ -740,7 +744,7 @@ Table 2: Mixed Effects Linear Model with the dependent variable log(time). Sign 
 
 <<timefit, dependson='powerfit', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
 #timelmer <-  lmer(log_time ~ smoothed + r + n + rsgn*r + plot + plot*smoothed 
-                  + plot*r + plot*n + plot*rsgn*r + plot*correct + (1|subj_id), data=full.sub)
+#                  + plot*r + plot*n + plot*rsgn*r + plot*correct + (1|subj_id), data=full.sub)
 #time.fit <- summary(timelmer)$coefficients
 #pv <- function(x){
 #  p <- 2*(1-pt(x, 1835))
@@ -771,7 +775,7 @@ If a data analyst is required to use overlaid line graphs in their work, substan
 \section{Appendix}
 
 \begin{table}
-\lab{tab3}
+\label{tab3}
 \centering
 <<answertables, dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
 turk.tbl <- select(Turk, test_param, smoothed, r, n, correct, attempt)
@@ -795,7 +799,7 @@ kable(line.sm, format="latex", caption="Smoothed overlaid line results")
 Table~\ref{tab3} contains the true plot detections / attempts for each lineup in the data collection. True plot correlation is on the x axis and t is on the y axis. 
 
 \begin{figure}[htbp]
-\lab{map}
+\label{map}
 \centering
 <<map, , dependson='setup', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
 location <- read.csv("location.csv")
